# BitwiseWizard

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp
back_end/: build_run.bat  exec  functions.cpp  functions.h  functions.hpp  main.cpp
front_end/: maindwindow.h  mainwindow.cpp  mainwindow.ui
src/core/: exec  functions.cpp  functions.hpp  main1.txt
src/gui/: app_gui.cpp  app_gui.h
